--- a/fta2dgm.Rmd
+++ b/fta2dgm.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Supplementary materials for paper: French trade axe morphology differs by makers' mark: A preliminary analysis"
+title: "Supplementary materials for paper: French trade axes from the La Belle shipwreck demonstrate significant morphological differences by makers' mark"
 author: "Robert Z. Selden, Jr."
 date: "`r format(Sys.time(), '%d %B, %Y')`"
 output: github_document
@@ -10,11 +10,10 @@ bibliography: book.bib
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-
 ## Load packages
 
 ```{r load.packages, echo = TRUE}
-# devtools::install_github("geomorphR/geomorph", ref = "Stable", build_vignettes = TRUE)
+#devtools::install_github("geomorphR/geomorph", ref = "Stable", build_vignettes = TRUE)
 library(here)
 library(StereoMorph)
 library(geomorph)
@@ -31,9 +30,9 @@ coords<- readland.shapes(shapes, nCurvePts = c(5,10,10,10,3,5,5))
 qdata <- read.csv("qdata.csv", header = TRUE, row.names = 1)
 ```
 
-## Generalized Procrustes Analysis
+## Generalised Procrustes Analysis
 
-Landmark data were aligned to a global coordinate system [@RN11622;@RN11623;@RN11563], achieved through generalized Procrustes superimposition [@RN478] performed in R 4.0.2 [@R] using the `geomorph` library v. 3.3.1 [@RN11530;@RN1774]. Procrustes superimposition translates, scales, and rotates the coordinate data to allow for comparisons among objects [@RN11564;@RN478]. The `geomorph` package uses a partial Procrustes superimposition that projects the aligned specimens into tangent space subsequent to alignment in preparation for the use of multivariate methods that assume linear space [@RN1646;@RN11563]. 
+Landmark data were aligned to a global coordinate system [@RN11622;@RN11623;@RN11563], achieved through generalised Procrustes superimposition [@RN478] performed in R 4.0.4 [@R] using the `geomorph` library v. 3.3.2 [@RN11530;@RN1774]. Procrustes superimposition translates, scales, and rotates the coordinate data to allow for comparisons among objects [@RN11564;@RN478]. The `geomorph` package uses a partial Procrustes superimposition that projects the aligned specimens into tangent space subsequent to alignment in preparation for the use of multivariate methods that assume linear space [@RN1646;@RN11563]. 
 
 ```{r gpa, out.width = "100%", dpi = 300, echo=TRUE, warning=FALSE}
 # gpa ----
@@ -100,19 +99,19 @@ knitr::include_graphics('./figures/pca.warp.jpg')
 
 ## Test hypothesis
 
-_Hypothesis: There are morphological differences in French trade axes that bear an asterisk or DG makers' marks._
+_Hypothesis: There are morphological differences between French trade axes that bear an asterisk or DG makers' marks._
 
 ```{r def.mod.1, out.width = "100%", dpi = 300, echo=TRUE, warning=FALSE}
-## size as a function of mark ----
+# size as a function of mark ----
 fit.size.mark <- procD.lm(size ~ mark, 
                           data = gdf, 
                           print.progress = FALSE, 
                           iter = 9999)
 
-# differences in size by mark?
+## differences in size by mark?
 anova(fit.size.mark)
 
-## shape as a function of mark ----
+# shape as a function of mark ----
 fit.shape.mark <- procD.lm(shape ~ mark, 
                            data = gdf, 
                            print.progress = FALSE, 
@@ -120,6 +119,18 @@ fit.shape.mark <- procD.lm(shape ~ mark,
 
 ## differences in shape by mark? ----
 anova(fit.shape.mark)
+```
+
+### Morphological disparity
+
+```{r m-disparity.h4, out.width = "100%", dpi = 300, echo=TRUE, warning=FALSE}
+# does one of the groups display greater shape variation among individuals 
+# relative to the other group?
+morphol.disparity(shape ~ mark, 
+                  groups = qdata$mark, 
+                  data = gdf, 
+                  print.progress = FALSE, 
+                  iter = 9999)
 ```
 
 ### Mean shapes
@@ -134,14 +145,31 @@ names(new.coords)
 mean <- lapply(new.coords, mshape)
 
 # plot mean shapes
-plot(mean$asterisk) # mean shape of axe with asterisk mark
-plot(mean$DG) # mean shape of axe with DG mark
+plot(mean$asterisk) # mean shape for axes with asterisk mark
+plot(mean$DG) # mean shape for axes with DG mark
 
-# comparison plot of asterisk (gray) vs DG (linear vector)
+# comparison plot of French trade axes bearing asterisk (gray) 
+# and DG (black) marks
 plotRefToTarget(mean$asterisk, 
                 mean$DG, 
-                method = "vector",
+                method = "point",
                 mag = 2)
+```
+
+### Colophon
+
+This version of the analysis was generated on `r Sys.time()` using the following computational environment and dependencies: 
+
+```{r colophon, cache = FALSE}
+# what R packages and versions were used?
+if ("devtools" %in% installed.packages()) devtools::session_info()
+```
+
+Current Git commit details are:
+
+```{r}
+# where can I find this commit? 
+if ("git2r" %in% installed.packages() & git2r::in_repository(path = ".")) git2r::repository(here::here())  
 ```
 
 ## References cited
