--- a/fta2dgm.Rmd
+++ b/fta2dgm.Rmd
@@ -13,6 +13,7 @@ knitr::opts_chunk$set(echo = TRUE)
 ## Load packages
 
 ```{r load.packages, echo = TRUE}
+#devtools::install_github("mlcollyer/RRPP")
 #devtools::install_github("geomorphR/geomorph", ref = "Stable", build_vignettes = TRUE)
 library(here)
 library(StereoMorph)
